<resources>
    <string name="app_name">GitPositive</string>
    <string name="username">To begin with, enter your username</string>
    <string name="about">A better GitHub profile</string>
    <string name="github_username">GitHub Username</string>
    <string name="gitpositive">GitPositive</string>
    <string name="master_yoda">Master Yoda</string>
    <string name="user_name">User Name</string>
    <string name="bio">Bio</string>
    <string name="followers_n">Followers\n</string>
    <string name="repositories_n">Repositories\n</string>
    <string name="following_n">Following\n</string>
    <string name="view_repositories">View repositories</string>
    <string name="about_acm_vit">ACM-VIT, one of the most reputed and distinguished technical chapter in VIT-Vellore has been working with vision and determination since it’s inception in 2009.</string>
    <string name="made_with_by_acm_vit">Made with ❤ by ACM-VIT</string>
    <string name="app_version">Version 1.0</string>
    <string name="about_header">About</string>
    <string name="forks">Forks</string>
    <string name="stars">Stars</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
</resources>