<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gitpositive"
        android:textSize="18sp"
        android:textColor="#6CFF54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="662dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border"
            android:gravity="center|top"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:elevation="12dp"
                app:cardCornerRadius="100dp">

                <ImageView

                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/master_yoda"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#66FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/bio"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <Button
                android:textAllCaps="false"
                android:id="@+id/follower_count"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:theme="@style/Button.Grey"
                android:background="@drawable/border"
                android:text="@string/followers_n" />

            <Button
                android:textAllCaps="false"
                android:background="@drawable/border"
                android:gravity="center"
                android:id="@+id/RepoCount"
                android:layout_margin="5dp"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:padding="1dp"
                android:text="@string/repositories_n" />

            <Button
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:id="@+id/Following_Count"
                android:padding="5dp"
                android:background="@drawable/border"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/following_n" />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:text="@string/view_repositories" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>